--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,10 +11,15 @@ html, body {
     background-color: black;
 }
 
+body {
+    background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 main {
     position: relative;
     height: 100vh;
-    background-color: green;
+    
 }
 
 section#telefone {
@@ -22,8 +27,8 @@ section#telefone {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 500px;
-    background-color: blue;
-    background: url(../imagens/);
+    height: 627px;
+    width: 311px;
+    
+    background: url(../imagens/frame-iphone.png) no-repeat;
 }
