--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,10 +16,10 @@ body {
     background-size: cover;
     background-attachment: fixed;
 }
+
 main {
     position: relative;
     height: 100vh;
-    
 }
 
 section#telefone {
@@ -29,6 +29,13 @@ section#telefone {
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
-    
     background: url(../imagens/frame-iphone.png) no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
